# Velocity-Vortex-Order-Manager-Core

./: .gitignore  CMakeLists.txt  README.md
include/: APIClient.hpp  Database.hpp  Queue.hpp  order.hpp  order_manager.hpp  utils.hpp
src/: Database.cpp  Queue.cpp  main.cpp  order.cpp  order_manager.cpp  utils.cpp
